fix emote clipping

--- a/assets/chat/css/style.scss
+++ b/assets/chat/css/style.scss
@@ -893,6 +893,7 @@ a.flair12:hover {
 
 /* Emotes and combo */
 .chat-emote {
+    background-repeat: no-repeat;
     display: inline-block;
     position: relative;
     z-index: 1;
